# qstocks-filing-tool

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  install.sh  pyproject.toml  qscreen_analyze.py  qscreen_app.py  qscreen_charts.py  qscreen_dcf.py  qscreen_ingest.py  qscreen_periods.py  qscreen_portfolio.py  qscreen_report.py  qscreen_series.py  qscreen_workbook.py  requirements.txt
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
qatar/: __init__.py  _seed.py
qatar/profiles/: ABQK.json  AHCS.json  AKHI.json  BEMA.json  BLDN.json  BRES.json  CBQK.json  DBIS.json  DHBK.json  DOHI.json  DUBK.json  ERES.json  FALH.json  GISS.json  GWCS.json  IGRD.json  IHGS.json  IQCD.json  KCBK.json  MARK.json  MCCS.json  MCGS.json  MERS.json  MEZA.json  MHAR.json  MKDM.json  MPHC.json  MRDS.json  NLCS.json  ORDS.json  QAMC.json  QATI.json  QCFS.json  QEWS.json  QFBQ.json  QFLS.json  QGMD.json  QGRI.json  QGTS.json  QIBK.json  (+15 more)
tests/: test_analyze.py  test_app.py  test_audit_fixes.py  test_charts.py  test_dcf.py  test_deterministic.py  test_dotenv.py  test_guided.py  test_periods.py  test_portfolio.py  test_qatar.py  test_qscreen.py  test_report.py  test_security.py  test_series.py  test_workbook.py
